@startuml
!theme spacelab

entity "User" as user {
  *user_id : UUID <<PK>>
  --
  first_name : VARCHAR <<NOT NULL>>
  last_name : VARCHAR <<NOT NULL>>
  email : VARCHAR <<UNIQUE, NOT NULL>>
  password_hash : VARCHAR <<NOT NULL>>
  phone_number : VARCHAR <<NULL>>
  role : ENUM(guest, host, admin) <<NOT NULL>>
  created_at : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
}

entity "Property" as property {
  *property_id : UUID <<PK>>
  --
  host_id : UUID <<FK>> (User.user_id)
  name : VARCHAR <<NOT NULL>>
  description : TEXT <<NOT NULL>>
  location : VARCHAR <<NOT NULL>>
  pricepernight : DECIMAL <<NOT NULL>>
  created_at : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
  updated_at : TIMESTAMP <<ON UPDATE CURRENT_TIMESTAMP>>
}

entity "Booking" as booking {
  *booking_id : UUID <<PK>>
  --
  property_id : UUID <<FK>> (Property.property_id)
  user_id : UUID <<FK>> (User.user_id)
  start_date : DATE <<NOT NULL>>
  end_date : DATE <<NOT NULL>>
  total_price : DECIMAL <<NOT NULL>>
  status : ENUM(pending, confirmed, canceled) <<NOT NULL>>
  created_at : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
}

entity "Payment" as payment {
  *payment_id : UUID <<PK>>
  --
  booking_id : UUID <<FK>> (Booking.booking_id)
  amount : DECIMAL <<NOT NULL>>
  payment_date : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
  payment_method : ENUM(credit_card, paypal, stripe) <<NOT NULL>>
}

entity "Review" as review {
  *review_id : UUID <<PK>>
  --
  property_id : UUID <<FK>> (Property.property_id)
  user_id : UUID <<FK>> (User.user_id)
  rating : INTEGER <<CHECK rating BETWEEN 1 AND 5, NOT NULL>>
  comment : TEXT <<NOT NULL>>
  created_at : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
}

entity "Message" as message {
  *message_id : UUID <<PK>>
  --
  sender_id : UUID <<FK>> (User.user_id)
  recipient_id : UUID <<FK>> (User.user_id)
  message_body : TEXT <<NOT NULL>>
  sent_at : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
}

' Relationships
user ||--o{ property : hosts
user ||--o{ booking : makes
user ||--o{ review : writes
user ||--o{ message : sends
user ||--o{ message : receives

property ||--o{ booking : has
property ||--o{ review : receives

booking ||--|| payment : generates

@enduml
